--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArtWall</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Artwalla</title>
     <script src="main.js" defer></script>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <div id="background"></div>
+    <div id="logo"></div>
+  </body>
 </html>
