--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artwalla</title>
-    <script src="main.js" defer></script>
-    <link rel="stylesheet" href="main.css" />
+    <script src="main.js?update=1" defer></script>
+    <link rel="stylesheet" href="main.css?update=1" />
   </head>
   <body>
     <div id="background"></div>
