--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artwalla</title>
-    <script src="main.js?update=3" defer></script>
-    <link rel="stylesheet" href="main.css?update=3" />
-  </head>
-  <body>
-    <div id="background"></div>
-    <div id="logo"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Artwalla</title>
+  <script src="main.js?update=4" defer></script>
+  <link rel="stylesheet" href="main.css?update=4" />
+</head>
+
+<body>
+  <div id="background"></div>
+  <div id="logo"></div>
+  <div class="tray">
+    <iframe class="news" scrolling="no"
+      src="https://toys.kait.dev/feeder/index.php?key=LinkPenginIsGreat&style=alt"></iframe>
+    <iframe class="plex" scrolling="no" src="https://toys.kait.dev/plex/index.php?display=board&style=zune"></iframe>
+  </div>
+  <div class="tray bottom">
+    <iframe class="news" scrolling="no" src="https://toys.kait.dev/feeder/index.php?key=LinkPenginIsGreat"></iframe>
+    <iframe class="plex" scrolling="no" src="https://toys.kait.dev/plex/index.php?display=board"></iframe>
+  </div>
+
+</body>
+
 </html>
