--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,16 @@
   <div id="logo"></div>
   <div class="tray">
     <iframe class="news" scrolling="no"
-      src="https://toys.kait.dev/feeder/index.php?key=LinkPenginIsGreat&style=alt"></iframe>
+      src="https://toys.kait.dev/feeder/index.php?key=LinkPenginIsGreat&type=good"></iframe>
     <iframe class="plex" scrolling="no" src="https://toys.kait.dev/plex/index.php?display=board&style=zune"></iframe>
   </div>
   <div class="tray bottom">
     <iframe class="news" scrolling="no" src="https://toys.kait.dev/feeder/index.php?key=LinkPenginIsGreat"></iframe>
     <iframe class="plex" scrolling="no" src="https://toys.kait.dev/plex/index.php?display=board"></iframe>
   </div>
-
+  <div id="container">
+    <div id="mat"></div>
+  </div>
 </body>
 
 </html>
