offline push connector notification & retry

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     </div>
     <div id="container">
       <iframe id="status" src="https://toys.kait.dev/status/?display"></iframe>
+      <img src="/assets/offline.svg" id="offline" />
       <div id="mat"></div>
     </div>
   </body>
